--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY package*.json ./
 COPY prisma ./prisma/
+COPY frontend ./frontend/
 
 RUN npm ci
 
@@ -18,6 +19,7 @@ WORKDIR /app
 
 COPY package*.json ./
 COPY prisma ./prisma/
+COPY frontend ./frontend/
 
 RUN npm ci --only=production
 RUN npx prisma generate
